--- a/source/styles/components/quiz.css
+++ b/source/styles/components/quiz.css
@@ -62,6 +62,12 @@
 	}
 }
 
+@media (min-width: 1200px) {
+	.quiz__content {
+		--gap: 100px;
+	}
+}
+
 .quiz__grid {
 	--columns: 1fr;
 	--gap: 15px;
@@ -572,4 +578,8 @@
 		opacity: 1;
 		transform: translate3d(0, 0, 0);
 	}
+}
+
+.quiz__content-title {
+	font-weight: 500;
 }
