--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -67,3 +67,6 @@
 @import "components/c-main-header.css";
 @import "components/profile.css";
 @import "components/quiz.css";
+@import "components/popup.css";
+
+
