--- a/source/styles/components/c-mobile-header-menu.css
+++ b/source/styles/components/c-mobile-header-menu.css
@@ -63,7 +63,7 @@
 	background-color: transparent;
 	background-image:var(--icon);
 	background-repeat: no-repeat;
-	background-position: right bottom;
+	background-position: right center;
 	border: none;
 }
 
