--- a/source/styles/components/main/main-card.css
+++ b/source/styles/components/main/main-card.css
@@ -171,6 +171,7 @@ width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	gap: var(--gap);
+	align-items: flex-start;
 }
 
 @media (min-width: 768px) { /* tablet */
