--- a/source/styles/components/popup.css
+++ b/source/styles/components/popup.css
@@ -1,54 +1,97 @@
-.popup {
-	position: fixed;
-	top: 0;
-	right: 0;
-	z-index: 2;
+.popup-button {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.8);
+	font-size: 42px;
+	color: #E1E1E1;
 }
 
-.popup__overlay {}
+.popup {
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 1;
 
+	padding-top: 100px;
+
+	display: none;
+	width: 100%;
+	height: 100%;
+
+	overflow: auto;
+	/* Enable scroll if needed */
+	background-color: rgb(0, 0, 0);
+	/* Fallback color */
+	background-color: rgba(0, 0, 0, 0.6);
+	/* Black w/ opacity */
+}
 
 
 .popup__content {
-	max-width: 478px;
-	background: linear-gradient(160deg, #4D506C 15%, #212339 109%), #2B2C42;
-	backdrop-filter: blur(33px);
-	border-radius: 20px;
+	position: relative;
+
 	padding: 30px;
-	text-align: center;
+	margin: auto;
+	width: 50%;
 
 	display: flex;
 	flex-direction: column;
 	gap: 30px;
 
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	background: linear-gradient(160deg, #4D506C 15%, #212339 109%),
+		#2B2C42;
+	backdrop-filter: blur(33px);
+	border-radius: 20px;
+	text-align: center;
+
+	-webkit-animation-name: animatetop;
+	-webkit-animation-duration: 0.4s;
+	animation-name: animatetop;
+	animation-duration: 0.4s
 }
 
+
+@-webkit-keyframes animatetop {
+	from {
+		top: -300px;
+		opacity: 0
+	}
+
+	to {
+		top: 0;
+		opacity: 1
+	}
+}
+
+@keyframes animatetop {
+	from {
+		top: -300px;
+		opacity: 0
+	}
+
+	to {
+		top: 0;
+		opacity: 1
+	}
+}
 
 .popup__close {
 	position: absolute;
 	right: 15px;
 	top: 0;
-	font-size: 42px;
+
 	color: #E1E1E1;
+	font-size: 28px;
+	font-weight: bold;
 }
 
-.popup-button {
-	all: unset;
-
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-
-	font-size: 42px;
-	color: #E1E1E1;
+.popup__close:hover,
+.popup__close:focus,
+.popup-button:hover,
+.popup-button:focus {
+	color: yellow;
+	text-decoration: none;
+	cursor: pointer;
 }
