--- a/source/styles/components/popup.css
+++ b/source/styles/components/popup.css
@@ -6,27 +6,11 @@
 }
 
 .popup {
-	position: fixed;
-	left: 0;
-	top: 0;
-	z-index: 1;
+	background: linear-gradient(160deg, #4D506C 15%, #212339 109%), #2B2C42;
+	backdrop-filter: blur(33px);
+	border-radius: 20px;
+	text-align: center;
 
-	padding: 15px;
-
-	display: none;
-	width: 100%;
-	height: 100%;
-
-	overflow: auto;
-	/* Enable scroll if needed */
-	background-color: rgb(0, 0, 0);
-	/* Fallback color */
-	background-color: rgba(0, 0, 0, 0.6);
-	/* Black w/ opacity */
-}
-
-
-.popup__content {
 	position: relative;
 
 	padding: 30px;
@@ -37,38 +21,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 30px;
-
-
-
-	-webkit-animation-name: animatetop;
-	-webkit-animation-duration: 0.4s;
-	animation-name: animatetop;
-	animation-duration: 0.4s
-}
-
-
-@-webkit-keyframes animatetop {
-	from {
-		top: -300px;
-		opacity: 0
-	}
-
-	to {
-		top: 0;
-		opacity: 1
-	}
-}
-
-@keyframes animatetop {
-	from {
-		top: -300px;
-		opacity: 0
-	}
-
-	to {
-		top: 0;
-		opacity: 1
-	}
+	display: none;
 }
 
 .popup__close {
@@ -81,24 +34,6 @@
 	font-weight: bold;
 }
 
-.popup__close:hover,
-.popup__close:focus,
-.popup-button:hover,
-.popup-button:focus {
-	color: yellow;
-	text-decoration: none;
-	cursor: pointer;
-}
-
-
-
-.btn {
-	border: none;
-	cursor: pointer;
-	background-color: #000;
-	color: #fff;
-	padding: 10px;
-}
 
 .modal-overlay {
 	position: fixed;
@@ -119,26 +54,6 @@
 	transition: all 0.3s ease-in-out;
 }
 
-.modal {
-	background: linear-gradient(160deg, #4D506C 15%, #212339 109%),
-		#2B2C42;
-	backdrop-filter: blur(33px);
-	border-radius: 20px;
-	text-align: center;
-
-	position: relative;
-
-	padding: 30px;
-	margin: auto;
-	max-width: 478px;
-	min-width: 200px;
-
-	display: flex;
-	flex-direction: column;
-	gap: 30px;
-	display: none;
-}
-
 .modal-overlay--visible {
 	opacity: 1;
 	visibility: visible;
@@ -147,8 +62,4 @@
 
 .modal--visible {
 	display: flex;
-}
-
-.modal--nonvisible {
-display: none;
 }
