--- a/source/styles/components/popup.css
+++ b/source/styles/components/popup.css
@@ -56,6 +56,7 @@
 	justify-content: center;
 	height: 100vh;
 	width: 100%;
+	padding: 15px;
 
 	background-color: rgba(0, 0, 0, 0.7);
 	opacity: 0;
