--- a/source/styles/components/popup.css
+++ b/source/styles/components/popup.css
@@ -21,16 +21,24 @@
 
 	position: relative;
 
-	padding: 30px;
+	padding: 45px;
 	margin: auto;
-	min-height: 100px;
-	max-width: 478px;
+	min-height: 200px;
+	max-width: 390px;
 	min-width: 200px;
+	width: 100%;
 
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	gap: 30px;
 	display: none;
+}
+
+.popup__title {
+	font-family: 'FuturaPT';
+	font-weight: 600;
 }
 
 .popup__close {
@@ -38,11 +46,7 @@
 
 	position: absolute;
 	right: 15px;
-	top: 0;
-
-	color: #E1E1E1;
-	font-size: 28px;
-	font-weight: bold;
+	top: 15px;
 }
 
 .overlay {
