--- a/source/styles/components/main/manual.css
+++ b/source/styles/components/main/manual.css
@@ -11,6 +11,7 @@
 
 .manual__main-card {
 	padding: 25px;
+	align-items: flex-start;
 
 	background-position: right bottom;
 	background-repeat: no-repeat;
