--- a/source/styles/components/main/main-card.css
+++ b/source/styles/components/main/main-card.css
@@ -126,11 +126,16 @@ width: 100%;
 	padding: 8px 19px;
 	background-color: #212339;
 	border-radius: 50px;
-	max-width: 174px;
 	font-size: 14px;
 	line-height: 18px;
 	position: relative;
 	margin-top: auto;
+	border: none;
+	align-self: flex-start;
+}
+
+.main-card__link-btn:hover {
+	cursor: pointer;
 }
 
 .main-card__link-btn--small {
@@ -204,4 +209,18 @@ width: 100%;
 
 .interesting__content .main-card {
 	justify-content: flex-start;
+}
+
+.main-card__text_type_short {
+	--line: 7;
+
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -moz-box;
+	-moz-box-orient: vertical;
+	display: -webkit-box;
+	-webkit-line-clamp: var(--line);
+	-webkit-box-orient: vertical;
+	line-clamp: var(--line);
+	box-orient: vertical;
 }
