--- a/source/styles/components/profile.css
+++ b/source/styles/components/profile.css
@@ -74,6 +74,14 @@
 }
 
 .profile__avatar-image {
+	border-radius: inherit;
+}
+
+.profile__avatar-image:hover {
+	cursor: pointer;
+}
+
+.profile__avatar-image-content {
 	width: 100%;
 	height: 100%;
 
