--- a/source/styles/components/main/nav.css
+++ b/source/styles/components/main/nav.css
@@ -4,10 +4,15 @@
 	gap: 20px;
 	padding-top: 100px;
 	padding-bottom: 18px;
-	margin-bottom: 111px;
 
 	text-align: left;
 	border-bottom: 1px solid #fff;
+}
+
+@media (min-width: 1200px) {
+	.nav {
+		margin-bottom: 111px;
+	}
 }
 
 .nav__title {
