--- a/source/styles/base/global.css
+++ b/source/styles/base/global.css
@@ -1,16 +1,18 @@
 .page__body {
+	--block-height: 75px;
+
 	background-color: #212339;
 	color: #ffffff;
 	font-family: 'FuturaPT';
 	font-size: 16px;
 	line-height: 1.3;
 	margin: 0;
-	padding-top: var(--header-height);
+	padding-top: var(--block-height);
 }
 
 @media (min-width: 1200px) {
 	.page__body {
-		padding-top: var(--main-header-height);
+		--block-height: 125px;
 	}
 }
 
