--- a/source/styles/components/popup.css
+++ b/source/styles/components/popup.css
@@ -1,11 +1,18 @@
 .popup {
+	--z-index: -1;
+
 	position: fixed;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
+	z-index: var(--z-index);
 
 	display: flex;
+}
+
+.popup_state_active {
+	--z-index: 1;
 }
 
 .popup__close:hover {
