--- a/source/styles/components/quiz.css
+++ b/source/styles/components/quiz.css
@@ -583,7 +583,16 @@
 
 .quiz__block-content {
 	display: grid;
-	grid-template-columns: repeat(4, auto);
+	grid-template-columns: repeat(5, auto);
 	gap: 20px;
 	padding: 0;
+}
+
+@media (min-width: 768px) {
+	.quiz__block-content {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		gap: 20px;
+	}
 }
