--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -68,3 +68,4 @@
 @import "components/profile.css";
 @import "components/quiz.css";
 @import "components/popup.css";
+@import "components/halving.css";
