--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -69,3 +69,4 @@
 @import "components/quiz.css";
 @import "components/popup.css";
 @import "components/halving.css";
+@import "components/hidden.css";
