--- a/source/styles/components/main/main-card.css
+++ b/source/styles/components/main/main-card.css
@@ -122,15 +122,21 @@ width: 100%;
 }
 
 .main-card__link-btn {
-	padding: 8px 19px;
+	padding: 12px 19px;
+	padding-right: 31px;
 	background-color: #212339;
 	border-radius: 50px;
 	font-size: 14px;
-	line-height: 18px;
+	line-height: 1;
 	position: relative;
 	margin-top: auto;
 	border: none;
 	align-self: flex-start;
+
+	background-image: url("data:image/svg+xml,%0A%3Csvg width='4' height='5' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.546 2.5.459.906A.441.441 0 0 1 .995.205l1.965 1.5a1 1 0 0 1 0 1.59l-1.965 1.5a.441.441 0 0 1-.536-.701L2.546 2.5Z' fill='%23fff'/%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	background-position: center right 20px;
+	background-size: 5px 4px;
 }
 
 .main-card__link-btn:hover {
@@ -139,19 +145,6 @@ width: 100%;
 
 .main-card__link-btn--small {
 	max-width: 119px;
-}
-
-.main-card__link-btn::after {
-	content: " ";
-	background-position: center center;
-	background-repeat: no-repeat;
-	height: 4px;
-	position: absolute;
-	width: 4px;
-	top: 50%;
-	right: 10px;
-	transform: translateY(-50%);
-	background-image: url('../images/main/last/arrow.svg');
 }
 
 .main-card__tag-wrapper_position_top {
