--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -69,4 +69,5 @@
 @import "components/quiz.css";
 @import "components/popup.css";
 @import "components/halving.css";
+@import "components/grid-container.css";
 @import "components/hidden.css";
